Changed demo to have ships colliding, added trackball controls, added stars, fixed layout problems due to canvas as inline

--- a/client/game/styl/s.styl
+++ b/client/game/styl/s.styl
@@ -5,3 +5,6 @@ body
 
 	font-family: monospace
 	font-size: 16px
+
+canvas
+	display: block // Avoid scrolling due to whitespace
